--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Product_Help</string>
+    <string name="product_questions">Product Questions</string>
 </resources>
