--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Product_Help</string>
     <string name="product_questions">Product Questions</string>
+    <string name="retry">Retry</string>
 </resources>
